<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="article"
            type="my.mvvm.news.data.model.Article" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewCount">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/news_img"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:layout_gravity="top|center_horizontal"
                    android:image="@{ article.urlToImage}"
                    android:maxHeight="280dp"
                    android:scaleType="centerCrop"
                    tools:ignore="contentDescription"
                    tools:src="@drawable/placeholder" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/news_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:lineSpacingExtra="2sp"
                        android:text='@{ article.title ?? " " }'
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold"
                        tools:maxLines="3"
                        tools:text="@string/placeholder_text" />

                    <TextView
                        android:id="@+id/news_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/news_title"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="8dp"
                        android:date='@{ article.publishedAt ?? " " }'
                        android:drawablePadding="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:drawableLeftCompat="@drawable/ic_calendar"
                        tools:text="June 01, 2020 09:25" />

                    <TextView
                        android:id="@+id/news_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/news_date"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="8dp"
                        android:text='@{ article.description ?? " " }'
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black"
                        tools:text="@string/placeholder_text" />

                    <TextView
                        android:id="@+id/news_author_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/news_description"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/author"
                        android:textColor="@color/details_text_color"
                        android:textSize="16sp"
                        android:textStyle="italic|bold"
                        android:visibility="@{ article.author != null? View.VISIBLE : View.GONE }" />

                    <TextView
                        android:id="@+id/news_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/news_description"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_toEndOf="@id/news_author_label"
                        android:layout_toRightOf="@id/news_author_label"
                        android:text='@{ article.author ?? " " }'
                        android:textColor="@color/details_text_color"
                        android:textSize="16sp"
                        android:visibility="@{ article.author != null? View.VISIBLE: View.GONE }"
                        tools:text="Мария Ивановна" />

                    <TextView
                        android:id="@+id/news_source_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/news_author_label"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/source"
                        android:textColor="@color/details_text_color"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/news_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/news_author_label"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_toEndOf="@id/news_source_label"
                        android:layout_toRightOf="@id/news_source_label"
                        android:source="@{ article }"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        tools:text="Mobiltelefon.ru" />

                    <TextView
                        android:id="@+id/news_content_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/news_source_label"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/content"
                        android:textColor="@color/details_text_color"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        android:visibility="@{ article.content != null? View.VISIBLE : View.GONE }" />

                    <TextView
                        android:id="@+id/news_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/news_source_label"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_toEndOf="@id/news_content_label"
                        android:layout_toRightOf="@id/news_content_label"
                        android:text='@{ article.content ?? " "}'
                        android:textColor="@color/details_text_color"
                        android:textSize="14sp"
                        android:visibility="@{ article.content != null? View.VISIBLE : View.GONE }"
                        tools:text="@string/content_placeholder_text" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>